--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -1615,11 +1615,9 @@ series:
         dtstart: 2022-04-07 18:00:00+02:00
         dtend: 2022-04-07 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 2, 6:00 PM  CEST: **IMPORTANT! This is a hybrid event.**
-
-        **Take just a minute to register [here](https://docs.google.com/forms/d/e/1FAIpQLSfrjEd73wmXPJwdfuOx_7V3PmoXvzuCwDD81cByUmfiLMV8eg/vi'
-      og_title: Can You Land a Job in Tech without a CS Degree?, Thu, Jun 2, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/285674292/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Can You Land a Job in Tech without a CS Degree?
         description: 'Pure Storage Talks
@@ -1630,14 +1628,14 @@ series:
           **IMPORTANT! This is a hybrid event.****Take just a minute to register (https://docs.google.com/forms/d/e/1FAIpQLSfrjEd73wmXPJwdfuOx_7V3PmoXvzuCwDD81c...
 
 
-          https://www.meetup.com/Pure-Storage-Talks/events/285674292/'
+          https://www.meetup.com/pure-storage-talks/events/285674292/'
         location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285674292@meetup.com
-        url: https://www.meetup.com/Pure-Storage-Talks/events/285674292/
+        url: https://www.meetup.com/pure-storage-talks/events/285674292/
         dtstart: 2022-06-02 18:00:00+02:00
         dtend: 2022-06-02 19:30:00+02:00
   - meetupcom:
