--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -4354,9 +4354,9 @@ series:
         dtstart: 2021-11-11 18:00:00+01:00
         dtend: 2021-11-11 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jun 16, 6:00 PM  CEST: You are welcome to join us for the next Pure Storage Meet Up that will touch the topic of **Optimizing Go**. We’ll walk you through the basic tools Go has to offer for anal'
-      og_title: Optimizing Go Meet Up, Thu, Jun 16, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/286435658/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Optimizing Go Meet Up
         description: 'Pure Storage Talks
