--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1297,9 +1297,9 @@ series:
         dtstart: 2022-06-14 18:30:00+02:00
         dtend: 2022-06-14 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 16, 6:30 PM  CEST: Join the [TypeDB community](https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity allows you to model '
-      og_title: TypeDB Academy | Modelling Principles, Thu, Jun 16, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/286113208/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: TypeDB Academy | Modelling Principles
         description: 'TypeDB Prague Engineers
@@ -1829,3 +1829,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286111477/
         dtstart: 2022-06-14 18:30:00+02:00
         dtend: 2022-06-14 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jun 30, 6:30 PM  CEST: Using SQL to query relational databases is easy. As a declarative language, it’s straightforward to write queries and build powerful applications. However, relational datab'
+      og_title: Beyond SQL | Comparing SQL to TypeQL, Thu, Jun 30, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/286115362/
+      ical:
+        summary: Beyond SQL | Comparing SQL to TypeQL
+        description: 'TypeDB Prague Engineers
+
+          Thursday, June 30 at 6:30 PM
+
+
+          Using SQL to query relational databases is easy. As a declarative language\, it’s straightforward to write queries and build powerful applications. How...
+
+
+          https://www.meetup.com/typedb-prague/events/286115362/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286115362@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286115362/
+        dtstart: 2022-06-30 18:30:00+02:00
+        dtend: 2022-06-30 19:30:00+02:00
