--- a/data/sources/mlmu-prague.yaml
+++ b/data/sources/mlmu-prague.yaml
@@ -3208,12 +3208,9 @@ series:
         dtstart: 2021-12-14 18:00:00+01:00
         dtend: 2021-12-14 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 19, 4:00 PM  CEST: # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals
-
-
-        We invite you to the online discussion "The Role of AI in Achieving the Sustainable Development '
-      og_title: D<AI>DALOS – Role of AI in Achieving The Sustainable Development Goals, Tue, Apr 19, 2022, 4:00 PM   | Meetup
-      url: https://www.meetup.com/prague-machine-learning/events/285343992/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: D<AI>DALOS – Role of AI in Achieving The Sustainable Development Goals
         description: 'Machine Learning Meetup Prague
@@ -3224,25 +3221,20 @@ series:
           # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals We invite you to the online discussion "The Role of AI in Achieving the Sus...
 
 
-          https://www.meetup.com/Prague-Machine-Learning/events/285343992/'
+          https://www.meetup.com/prague-machine-learning/events/285343992/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285343992@meetup.com
-        url: https://www.meetup.com/Prague-Machine-Learning/events/285343992/
+        url: https://www.meetup.com/prague-machine-learning/events/285343992/
         dtstart: 2022-04-19 16:00:00+02:00
         dtend: 2022-04-19 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jan 27, 6:00 PM  CET: Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning)
-
-
-        Abstract
-
-        Speech data is notoriously difficult to work'
-      og_title: 'MLMU Online #18: Voice processing revolution: The future is now!, Thu, Jan 27, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/prague-machine-learning/events/283360069/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'MLMU Online #18: Voice processing revolution: The future is now!'
         description: 'Machine Learning Meetup Prague
@@ -3253,23 +3245,20 @@ series:
           Talk #1: Lhotse: a speech data representation library for the modern deep learning ecosystem (Piotr Żelasko, Meaning) AbstractSpeech data is notorious...
 
 
-          https://www.meetup.com/Prague-Machine-Learning/events/283360069/'
+          https://www.meetup.com/prague-machine-learning/events/283360069/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_283360069@meetup.com
-        url: https://www.meetup.com/Prague-Machine-Learning/events/283360069/
+        url: https://www.meetup.com/prague-machine-learning/events/283360069/
         dtstart: 2022-01-27 18:00:00+01:00
         dtend: 2022-01-27 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Jan 19, 6:00 PM  CET: DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism
-
-
-        We invite you to the online discussion AI as a New Frontier for Journalism: W'
-      og_title: D<AI>DALOS – AI as a New Frontier for Journalism, Wed, Jan 19, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/prague-machine-learning/events/283095372/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: D<AI>DALOS – AI as a New Frontier for Journalism
         description: 'Machine Learning Meetup Prague
@@ -3280,26 +3269,20 @@ series:
           DAIDALOS – AI as a New Frontier for Journalism: Where to Find Value in Tech-Driven Journalism We invite you to the online discussion AI as a New Front...
 
 
-          https://www.meetup.com/Prague-Machine-Learning/events/283095372/'
+          https://www.meetup.com/prague-machine-learning/events/283095372/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_283095372@meetup.com
-        url: https://www.meetup.com/Prague-Machine-Learning/events/283095372/
+        url: https://www.meetup.com/prague-machine-learning/events/283095372/
         dtstart: 2022-01-19 18:00:00+01:00
         dtend: 2022-01-19 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Dec 14, 6:00 PM  CET: The talks will be live on YouTube. (Link will get displayed after you RSVP)
-
-
-        Talk #1: How we use simple models to improve intent matching (Tomáš Vodrážka, Feedyou)
-
-
-        Abstrac'
-      og_title: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned, Tue, Dec 14, 2021, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/prague-machine-learning/events/282546297/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'MLMU Online #17: Building Chatbots in Practice and Lessons Learned'
         description: 'Machine Learning Meetup Prague
@@ -3310,14 +3293,14 @@ series:
           The talks will be live on YouTube. (Link will get displayed after you RSVP) Talk #1: How we use simple models to improve intent matching (Tomáš Vodráž...
 
 
-          https://www.meetup.com/Prague-Machine-Learning/events/282546297/'
+          https://www.meetup.com/prague-machine-learning/events/282546297/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_282546297@meetup.com
-        url: https://www.meetup.com/Prague-Machine-Learning/events/282546297/
+        url: https://www.meetup.com/prague-machine-learning/events/282546297/
         dtstart: 2021-12-14 18:00:00+01:00
         dtend: 2021-12-14 20:00:00+01:00
   - meetupcom:
