data: cron update

--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -908,21 +908,9 @@ series:
         dtstart: 2022-06-07 18:30:00+02:00
         dtend: 2022-06-07 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jun 21, 6:30 PM  CEST: • How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-        '
-      og_title: GDG Garage Prague One, Tue, Jun 21, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gdgprague/events/xqcsqsydcjbcc/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -13903,3 +13891,39 @@ series:
         url: https://www.meetup.com/gdgprague/events/xqcsqsydclbdb/
         dtstart: 2022-08-02 18:30:00+02:00
         dtend: 2022-08-02 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Aug 16, 6:30 PM  CEST: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Aug 16, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydclbvb/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, August 16 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/xqcsqsydclbvb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydclbvb@meetup.com
+        url: https://www.meetup.com/gdgprague/events/xqcsqsydclbvb/
+        dtstart: 2022-08-16 18:30:00+02:00
+        dtend: 2022-08-16 20:30:00+02:00
