--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -1184,21 +1184,9 @@ series:
         dtstart: 2022-06-07 18:30:00+02:00
         dtend: 2022-06-07 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jun 21, 6:30 PM  CEST: • How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-        '
-      og_title: GDG Garage Prague One, Tue, Jun 21, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gdgprague/events/xqcsqsydcjbcc/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -1209,14 +1197,14 @@ series:
           • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
 
 
-          https://www.meetup.com/GDGPrague/events/xqcsqsydcjbcc/'
+          https://www.meetup.com/gdgprague/events/286289057/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_xqcsqsydcjbcc@meetup.com
-        url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbcc/
+        url: https://www.meetup.com/gdgprague/events/286289057/
         dtstart: 2022-06-21 18:30:00+02:00
         dtend: 2022-06-21 20:30:00+02:00
   - meetupcom:
